--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,3 +16,24 @@ $sans-serif-narrow  : "Inconsolata", monospace, "PT Sans Narrow", -apple-system,
 $global-font-family : $serif;
 $header-font-family : $sans-serif-narrow;
 $caption-font-family: $serif !default;
+
+html {
+    font-size: 12px; // originally 16px
+    @include breakpoint($medium) {
+        font-size: 14px; // originally 18px
+    }
+
+    @include breakpoint($large) {
+        font-size: 16px; // originally 20px
+    }
+
+    @include breakpoint($x-large) {
+        font-size: 18px; // originally 22px
+    }
+}
+
+// list title link remove underline
+.archive a {
+    color: inherit;
+    text-decoration: none;
+}
